# rhinomcp

./: .gitignore  IMPLEMENTATION.md  LICENSE  README.md  README.zh-CN.md  RhinoMCP.sln  TODO.md  rhinomcp.sln
contracts/: README.md  protocol.json  test_schemas.py
docs/: IMPLEMENTATION.md
grasshopper_mcp_plugin/: GrasshopperMCPPlugin.cs  GrasshopperMCPServer.cs  grasshopper_mcp.csproj
grasshopper_mcp_server/: README.md  main.py  pyproject.toml
grasshopper_mcp_server/src/grasshoppermcp/: __init__.py  server.py
grasshopper_mcp_server/src/grasshoppermcp/prompts/: __init__.py  gh_strategy.py
grasshopper_mcp_server/src/grasshoppermcp/resources/: __init__.py  component_reference.py
grasshopper_mcp_server/src/grasshoppermcp/tools/: __init__.py  add_component.py  analyze_and_group_definition.py  bake_component.py  batch_search_components.py  connect_components.py  create_definition.py  delete_component.py  disconnect_components.py  expire_solution.py  get_available_components.py  get_canvas_state.py  get_component_info.py  get_component_type_info.py  get_document_info.py  get_parameter_value.py  list_component_categories.py  list_components.py  run_solution.py  search_components.py  set_parameter_value.py
grasshopper_mcp_server/tests/: __init__.py  test_tools.py
plugin/: McpCommandAttribute.cs  RhinoMCPServer.cs  install.sh  (+2 more)
rhino_mcp_server/: pyproject.toml
rhino_mcp_server/src/rhinomcp/: __init__.py  server.py  validation.py
rhino_mcp_server/src/rhinomcp/prompts/: assert_general_strategy.py
rhino_mcp_server/src/rhinomcp/tools/: _grasshopper_common.py  advanced_geometry.py  boolean_operations.py  capture_viewport.py  create_object.py  create_objects.py  delete_layer.py  delete_object.py  execute_rhinocommon_csharp_code.py  execute_rhinoscript_python_code.py  get_commands.py  get_document_summary.py  get_object_info.py  get_objects.py  grasshopper_build.py  grasshopper_components.py  grasshopper_document.py  grasshopper_mutation.py  grasshopper_parameters.py  modify_object.py  modify_objects.py  object_attributes.py  rhinoscript_docs.py  run_command.py  select_objects.py
rhino_mcp_server/tests/: __init__.py  mock_rhino_server.py  test_connection.py  test_curve_operations.py  test_integration.py  test_tools.py
shared/python/: pyproject.toml
shared/python/mcp_shared/: __init__.py  connection.py  lifespan.py  tool_patterns.py
(+249 files in other folders)
