[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grasshoppermcp"
version = "0.1.0"
description = "Grasshopper integration through the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Jingcheng Chen" }
]

dependencies = [
    "mcp[cli]>=1.0.0",
    "fastmcp>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
grasshoppermcp = "grasshoppermcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/grasshoppermcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
