[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-shared"
version = "0.1.0"
description = "Shared components for RhinoMCP and GrasshopperMCP servers"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Jingcheng Chen" }
]

dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["mcp_shared"]
